<resources>
    <string name="app_name">HTC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_special_events">SPECIAL EVENTS</string>
    <string name="title_activity_sunday__service">SUNDAY SERVICE</string>
    <string name="title_activity_marriage_service">MARRIAGE SERVICE</string>
    <string name="title_activity_marriage_intro">INTRODUCTION</string>
    <string name="specialEventButtonstr">PASTORATE TILL DATE</string>
    <string name="confirmationServiceButtonstr">CHURCH HISTORY</string>
    <string name="marriageServiceButtonStr">MARRIAGE SERVICE</string>
    <string name="HolyBaptButtonStr">BAPTISM SERVICE</string>
    <string name="confServStr">BURIAL SERVICE</string>
    <string name="MarriageIntro1">A hymn is sung standing during\nwhich the bride enters the church\n\t\t\t\t\tThe persons to be married\n presents themselves before the minister, the\n man standing at the right hand of the woman</string>
    <string name="MarriageIntro2">The minister says :\n\t\t\t\tDearly beloved, we are gathered here in the presence of god to join this man and this woman in marriage. This is a Way of Life instituted by God. and Holy Scripture commands all men to hold it in honour. Our Lord Jesus Christ blessed it by his presence at Cana of Galilee.\n\t\tAbout this Way of Life hear what our Lord says :</string>
    <string name="MarriageIntro3">\t\t\t\t\t\t\t*From the beginning of creation, \'God made them male and female\'. \'For this reason a man shall leave his father and mother and be joined to his wife, and the two shall become one.\' So they are no longer two but one. What therefore God has joined together, let not man put asunder.\'*\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tMark 10:6-9</string>
    <string name="themarriageText5">These two persons have come here to be made one in this Holy Estate. But if anyone here knows any just cause why they may not be married according to the discipline of the Church and the law of this land. Let him now make it known, or else for ever hold his peace\n\t\t\t\t/if no impediment is alleged/\n\tI charge you both in the presence of God, that if either of you knows any reason why you may not be joined together in marriage, you do now confess it\n\t\t\t/if no impediment is alleged/</string>
    <string name="themarriageText6">ALMIGHTY and Most Merciful Father, without Whose help we cannot do anything as we ought, we pray that, as Thou hast brought these persons together by the Providence. Thou will enrich them with Thy grace, that they may enter into the Marriage Covenant as in Thy sight, and truly keep the vows they are about to make; through Jesus Christ our Lord. \n\t\t\t\t\t\t\t\t\t\t\t\t\t\tAMEN</string>
    <string name="themarriageText7">/MINISTER TO MAN/\n\t\t N, will you have this women, M, to be your wife, and cleave to her alone ?</string>
    <string name="themarriageText8">I Will</string>
    <string name="themarriageText9">/MINISTER TO WOMAN/\n\t\tM, Will you have this man, N, to be your husband, and cleave to him alone ?</string>
    <string name="themarriageText10">I Will</string>
    <string name="themarriageText11">/MINISTER SAYS/\n\t\tWho gives this woman to be married to this man ?</string>
    <string name="themarriageText12">\t\t\tAnd the parent or gaurdian puts the woman\'s right-hand into the Right-hand of the man</string>
    <string name="themarriageText13">\t\t\tif the parent or gaurdian is not present, The minister says:</string>
    <string name="themarriageText14">\t\t\tN and M, give each other the right-hand.</string>
    <string name="themarriageText15">/MAN/\n\t\t\tI N, take you, M, to be my wife, To have and to hold from this day forward; For better, For worse; For richer, for poorer; In sickness and In Health; To love, cherish, and protect, till death us do part, According to God\'s Holy Law; And to this I give you my pledge.</string>
    <string name="themarriageText16">/WOMAN/\n\t\t\tI M, Take you, N, to be my husband, To have and to hold from this day forward; For better, For worse; For richer, for poorer; In sickness and In Health; To love, cherish, and obey, till death us do part, According to God\'s Holy Law; And to this I give you my pledge.</string>
    <string name="themarriageText17">\t\t\tGod had heard your vows and we are witnesses.\n\t\t\tBLESS this Mangalasutra(Ring), O Merciful Lord, that he who gives it and she who wears it may ever be faithful one to the other, and continue together in love so long as they both shall live; through Jesus Christ our Lord.\n\t\t\t\t\t\t\t\t\tAMEN</string>
    <string name="themarriageText18">\t\t\tThe minister delivers the Mangalasutra(Ring) to the man.</string>
    <string name="themarriageText19">/MAN/\n\t\t\tThis Mangalasutra (Ring) I give you in token of constant faith and abiding love, I honour you with my body, and all my wordly goods with you I share.</string>
    <string name="themarriageText20">\t\t\tIf the woman gives a ring to the man, she puts it on his finger, and holds it, saying the minister :</string>
    <string name="themarriageText21">\t\t\tThis Ring I give you in token of constant faith and abiding love, I honour you with my body, and all my wordly goods with you I share.</string>
    <string name="themarriageText22">THE MINISTER DECLARES :\n\t\t\tAS N AND M HAVE MADE THEIR PLEADGE TO EACH OTHER BEFORE GOD AND BEFORE THIS CONGREGATION, I DECLARE THAT THEY ARE NOW HUSBAND AND WIFE, ACCORDING TO THE LAW OF THIS LAND AND THE ORDINANCE OF GOD; IN THE NAME OF THE FATHER, AND OF THE SON,AND OF THE HOLY SPIRIT.\n\t\t\t\t\t\t\t\t\tAMEN\n\t\t\tWHOM THEREFORE GOD HAS JOINED TOGETHER, LET NOT MAN PUT ASUNDER.</string>
    <string name="themarriageText23">\t\t\tthe man and the woman kneel, while the congregation remains standing. and the minister says :</string>
    <string name="themarriageText24">\t\t\tMOST Merciful and Gracious God, our Father, of Whom the Whole family in heaven and earth is named: Send Thy blessing upon N and M, whom we bless in Thy Name; that, living faithfully together, they may surely perform and keep the vow and covenant between them made, and may ever remain in perfect love and peace together, and live according to Thy law; through Jesus Christ our Lord.\n\t\t\t\\t\t\tAmen</string>
    <string name="themarriageText25">\t\t\tGOD the Father, God the Son, God the Holy Spirit, bless, preserve, and keep you; the Lord mercifully look upon you with favour, and fill you with all spiritual benediction and grace; that you may so live together in this life that in the world to come you may have life everlasting.\n\t\t\tAMEN</string>
    <string name="MarriagePrayertxt26">A hymn is sung; and the Psalm 67 and or 128 may be read during which the man and woman go to the Lord\'s Table. If the ceremony of the Saptapadi (Seven Steps) is observed, the people say or sing the psalm 67 pausing after each verse while the man and woman take one step forward.</string>
    <string name="MarriagePrayertxt27">Minister : Glory be to the father; and to the son, and to the Holy Spirit;</string>
    <string name="MarriagePrayertxt28">people : As it was in the beginning, is now, and ever shall be; world without end.\nAmen</string>
    <string name="MarriagePrayertxt29">*A Bible or new testament may then be placed in the hands of the newly married couple by the minister, with the words :</string>
    <string name="MarriagePrayertxt30">\t\t\tMAY THE WORD OF GOD BE A LAMP TO YOUR FEET AND A LIGHT TO YOUR PATH</string>
    <string name="MarriagePrayertxt31">\t\t\t\t\tThe following passage of Scripture is read :\n\t\t\t1 Corinthians 13 : 4-13.\n\t\t\tA sermon may be preached.\n\t\t\tThen the minister say :\n\t\t\t\t\tLet us pray</string>
    <string name="MarriagePrayertxt32">Minister : Lord, have mercy upon us.</string>
    <string name="MarriagePrayertxt33">people : Christ, have mercy upon us.\n\t\t\tThe Lord\'s prayer may be said.\n\t\t\tminister : Lord,save Thy servant and Thy handmaid;</string>
    <string name="MarriagePrayertxt34">People : And let them put their trust in Thee.</string>
    <string name="MarriagePrayertxt35">Minister : O Lord, send help from Thy Holy Place: </string>
    <string name="MarriagePrayertxt36">People : And evermore defend them.</string>
    <string name="MarriagePrayertxt37">Minister : Be unto them a Tower of Strength;</string>
    <string name="MarriagePrayertxt38">People : From the face of their enemy.</string>
    <string name="MarriagePrayertxt39">Minister : O Lord. hear our prayer;</string>
    <string name="MarriagePrayertxt40">People : And let our cry come unto Thee</string>
    <string name="MarriagePrayertxt41">Minister : Let us pray.\nALMIGHTY and Everlasting Father, Who has given to mankind the Ordinance of Marriage, and dost hallow it with Thy blessing: Bless, we beseech Thee, Thy servants N and M, now joined together as husband and wife; and grant that, bearing one another\'s burdens, sharing one another\'s joys, and together fulfilling the duties of their home, they may ever be faithful to each other in love and obedience to Thy Word: through Jesus Christ our Lord.\n <b>AMEN</b></string>
    <string name="MarriagePrayertxt42">\t\t\tO LORD and Saviour Jesus Christ, Who didst share at Nazareth the life of an earthly home; Reign, we beseech Thee, in the home of these Thy servants as Lord and King; give them grace that they may minister to others as Thou didst minister to men, and grant that by deed and word they may be witnesses of Thy Saving Love to those amongst whom they live; for Thy Holy Name\'s ake, Who livest and reignest with the father and the Holy Spirit, one God, World without end.\n<b>AMEN</b></string>
    <string name="MarriagePrayertxt43">\t\t\tThe following prayer may be omitted if the woman is past child-bearing:</string>
    <string name="MarriagePrayertxt44">\t\t\tO MERCIFUL Lord and Heavenly Father, by Whose Gracious Gift mankind is increased: Bestow, we beseech Thee, upon these Thy servants the heritage and gift of children, and grant that they may live together so long in Godly Love and Honour, that they may see their children brought up in Christian Faith and Virtue, to Thy Praise and Glory; through Jesus Christ our Lord.\n<b>Amen</b></string>
    <string name="MarriagePrayertxt45">\t\t\tO ALMIGHTY Lord, and Everlasting God, vouchsafe, we beseech Thee, to direct, sanctify, and govern, both our hearts and bodies in the ways of Thy laws, and in the works of Thy commandments; that through Thy most mighty protection, both here and ever, we may be preserved in body and soul; through our Lord and saviour Jesus Christ.\n<b>Amen</b></string>
    <string name="MarriagePrayertxt46">\t\t\tIf the Lord\'s Supper follows, the service begins at the Breaking of the Bread, Otherwise, the minister says:</string>
    <string name="MarriagePrayertxt47">\t\t\tTHE Grace of our Lord Jesus Christ, and the Love of God, and the Fellowship of the Holy Spirit, be with you all.\n<b>Amen</b></string>
    <string name="MarriagePrayertxt48">\t\t\tA hymn may be sung while the register is being signed by the Bridegroom and Bride. Two witnesses from each side should also sign.\n\t\t\tWedding march may be played and the newly weds go out of the Church</string>
    <string name="englishServiceBtn16">THE PREPARATION</string>
    <string name="englishServiceBtn17">THE TEN COMMANDMENTS</string>
    <string name="englishServiceBtn18">THE LAW AND THE PROPHETS</string>
    <string name="englishServiceBtn19">WORD OF GOD</string>
    <string name="englishServiceBtn20">THE NICENE CREED</string>
    <string name="englishServiceBtn21">THE APOSTLES CREED</string>
    <string name="englishServiceBtn22">INTERCESSARY PRAYERS</string>
    <string name="englishServiceBtn23">THE SECOND LITANY</string>
    <string name="englishServiceBtn24">AN EXHORTATION</string>
    <string name="englishServiceBtn25">THE BREAKING OF THE BREAD</string>
</resources>