<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shadrach.htc.MarriageThePrayer"
    android:background="@drawable/buttonbackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <TextView
            style="@style/Hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt26"
            android:id="@+id/textView26"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt27"
            android:id="@+id/textView27"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt28"
            android:id="@+id/textView28"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt29"
            android:id="@+id/textView29"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt30"
            android:id="@+id/textView30"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt31"
            android:id="@+id/textView31"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt32"
            android:id="@+id/textView32"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt33"
            android:id="@+id/textView33"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt34"
            android:id="@+id/textView34"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt35"
            android:id="@+id/textView35"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt36"
            android:id="@+id/textView36"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt37"
            android:id="@+id/textView37"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt38"
            android:id="@+id/textView38"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt39"
            android:id="@+id/textView39"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt40"
            android:id="@+id/textView40"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt41"
            android:id="@+id/textView41"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt42"
            android:id="@+id/textView42"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt43"
            android:id="@+id/textView43"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt44"
            android:id="@+id/textView44"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt45"
            android:id="@+id/textView45"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt46"
            android:id="@+id/textView46"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt47"
            android:id="@+id/textView47"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@style/Hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/MarriagePrayertxt48"
            android:id="@+id/textView48"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>



</ScrollView>
