<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shadrach.htc.TheMariage"
    android:background="@drawable/buttonbackground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                style="@style/Minister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText5"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Minister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText6"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Minister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText7"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText8"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Minister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText9"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText10"
                android:id="@+id/textView10"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Minister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText11"
                android:id="@+id/textView11"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Hints"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText12"
                android:id="@+id/textView12"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Hints"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText13"
                android:id="@+id/textView13"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Hints"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText14"
                android:id="@+id/textView14"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText15"
                android:id="@+id/textView15"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText16"
                android:id="@+id/textView16"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Minister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText17"
                android:id="@+id/textView17"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Hints"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText18"
                android:id="@+id/textView18"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText19"
                android:id="@+id/textView19"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Hints"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText20"
                android:id="@+id/textView20"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText21"
                android:id="@+id/textView21"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText22"
                android:id="@+id/textView22"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Hints"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText23"
                android:id="@+id/textView23"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Minister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText24"
                android:id="@+id/textView24"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

            <TextView
                style="@style/Minister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/themarriageText25"
                android:id="@+id/textView25"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>



</ScrollView>
